bug fix in __init__; got rid of warnings  in basis_functions

--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ all: $(SOURCES) libttv2fast2furious.so
 libttv2fast2furious.so: $(OBJECTS)
 	@echo ""
 	@echo "Linking shared library $@ ..."
-	$(CC) $(CFLAGS) -lm -lgsl -shared $(OBJECTS) -o $@
+	$(CC) $(CFLAGS) -lm -lgsl -lgslcblas -shared $(OBJECTS) -o $@
 	@echo ""
 	@echo "The shared library $< has been created successfully."
 
